--- a/about.html
+++ b/about.html
@@ -62,14 +62,14 @@
     </div>
 
     <div class="last-section">
-        <div class="icons">
-            <i class="social-item" class="bi bi-facebook"></i>
-            <i class="social-item" class="bi bi-instagram"></i>
-            <i class="social-item" class="bi bi-twitter"></i>
-            <i class="social-item" class="bi bi-github"></i>
-            <i class="social-item" class="bi bi-linkedin"></i>
-            <i class="social-item" class="bi bi-telegram"></i>
-            <i class="social-item" class="bi bi-tencent-qq"></i>       
+        <div class="icons" style=" padding-bottom: 300px;">
+            <i class="social-item"><i class="fa-brands fa-facebook"></i></i>
+            <i class="social-item" > <i class="fa-brands fa-square-instagram"></i></i>
+            <i class="social-item" ><i class="fa-brands fa-square-twitter"></i></i>
+            <i class="social-item" ><i class="fa-brands fa-github"></i></i>
+            <i class="social-item" ><i class="fa-brands fa-linkedin"></i></i>
+            <i class="social-item" ><i class="fa-brands fa-telegram"></i></i>
+            <i class="social-item" ><i class="bi bi-tencent-qq"></i></i>       
             
         </div>
        
